# fpga_traffic_simulator

./: README.md
FPGA-HLS/: README.md  awsver.txt  epic_visualizer.hpp  fixedptc.h  idm.hpp  main.cpp  sim.cpp
FPGA-NDRange/: constants.h  epic_visualizer.hpp  fixedptc.h  main.cpp  sim.cl
GPU/: CMakeLists.txt  epic_visualizer.hpp  fixedptc.h  idm.hpp  main.cpp  sim.cl
