cmake_minimum_required(VERSION 3.15)
project(traffic)

set(CMAKE_CXX_STANDARD 14)
find_package(OpenCL REQUIRED)
include_directories(${OpenCL_INCLUDE_DIRS})
link_directories(${OpenCL_LIBRARY})
add_executable(traffic main.cpp)
target_include_directories (traffic PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries (traffic ${OpenCL_LIBRARY})